Fixed image-sizes to under 200kb

--- a/exhibits.html
+++ b/exhibits.html
@@ -75,7 +75,7 @@
                         our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
                     <div class="newsbox_img">
                         <div class="product_img">
-                            <img src="images/evolution.png" alt="Image of people">
+                            <img src="images/evolution.jpg" alt="Image of people">
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         the latest exploration of the planets in our solar system.</p>
                     <div class="newsbox_img">
                         <div class="product_img">
-                            <img src="images/robot.png" alt="Image of a robot">
+                            <img src="images/robot.jpg" alt="Image of a robot">
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         the whole planet.</p>
                     <div class="newsbox_img">
                         <div class="product_img">
-                            <img src="images/ecology.png" alt="Image of bottom vegetation">
+                            <img src="images/ecology.jpg" alt="Image of bottom vegetation">
                         </div>
                     </div>
                 </div>
