--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
-                    <li><a href="/contact_us.html">Contact us</a></li>
+                    <li><a href="/contact_us.html" class="text_green">Contact us</a></li>
                 </ul>
             </nav>
         </div>
@@ -85,7 +85,7 @@
                     <h3>Night in the Museum</h3>
                 </a>
                 <a href="/news.html#Energetica_exhibition_on_loan" class="productbox text_black">
-                    <div class="product_img"><img src="images/lightenergy.png"
+                    <div class="product_img"><img src="images/lightenergy.jpg"
                             alt="Visiting Professor of Aeronautics image"></div>
                     <h3>Energetica Exhibition on Loan</h3>
                 </a>
@@ -107,7 +107,7 @@
                 <a href="/visit_us.html#for_teachers" class="explore_box">
                     <h3 class="button gray explore_text text_black">For Teachers</h3>
                     <figure class="black_square"></figure>
-                    <div class="product_img"><img src="/images/learning.png"
+                    <div class="product_img"><img src="/images/learning.jpg"
                             alt="Image of a kid and a teacher - For Teachers"></div>
                 </a>
                 <a href="/visit_us.html#for_reserchers" class="explore_box">
@@ -130,7 +130,7 @@
                     <h3 class="text_white">Cosmology</h3>
                 </a>
                 <a href="/exhibits.html#evolution" class="productbox">
-                    <div class="product_img"><img src="images/evolution.png" alt="Image of people">
+                    <div class="product_img"><img src="images/evolution.jpg" alt="Image of people">
                     </div>
                     <h3 class="text_white">Evolution</h3>
                 </a>
@@ -140,12 +140,12 @@
                     <h3 class="text_white">Biology and Medicine</h3>
                 </a>
                 <a href="/exhibits.html#robotics_and_AI" class="productbox">
-                    <div class="product_img"><img src="images/robot.png" alt="Image of a robot">
+                    <div class="product_img"><img src="images/robot.jpg" alt="Image of a robot">
                     </div>
                     <h3 class="text_white">Robotics and AI</h3>
                 </a>
                 <a href="/exhibits.html#ecology" class="productbox">
-                    <div class="product_img"><img src="images/ecology.png" alt="Image of bottom vegetation"></div>
+                    <div class="product_img"><img src="images/ecology.jpg" alt="Image of bottom vegetation"></div>
                     <h3 class="text_white">Ecology</h3>
                 </a>
             </div>
