--- a/information.html
+++ b/information.html
@@ -158,7 +158,7 @@
                         soft drinks, coffee, snacks and more.</p>
                 </div>
                 <div class="info_img border_blue">
-                    <img class="images" src="images/cafe.png" alt="Image from a cafe">
+                    <img class="images" src="images/cafe.jpg" alt="Image from a cafe">
                 </div>
             </div>
         </div>
