--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                         that shows how turbines are able to use and control wind to create power.</p>
                     <div class="newsbox_img">
                         <h4 class=" b_green event_date" aria-label="30.10.23">30.10.23</h4>
-                        <div class="product_img"><img src="images/lightenergy.png"
+                        <div class="product_img"><img src="images/lightenergy.jpg"
                                 alt="Visiting Professor of Aeronautics image"></div>
                     </div>
                 </div>
