--- a/visit_us.html
+++ b/visit_us.html
@@ -72,7 +72,7 @@
                 </div>
                 <div>
                     <div class="info_img">
-                        <img class="images" src="images/museum_hall.png" alt="Image from inside a museum">
+                        <img class="images" src="images/museum_hall.jpg" alt="Image from inside a museum">
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Teachers</h3>
                         <figure class="black_square"></figure>
-                        <div class="product_img"><img src="/images/learning.png" alt="Image of a kid and a teacher">
+                        <div class="product_img"><img src="/images/learning.jpg" alt="Image of a kid and a teacher">
                         </div>
                     </div>
                     <div class="group_info padding1rem">
