Cleaned css files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Community Science Museum - Home</title>
     <meta name="describtion" content="Discover the wonders of science and exploration at our museum. Immerse yourself in interactive exhibits and ignite your passion for the world around us.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
         <a href="/index.html" class="header_logo"></a>
         <div class="floating_nav">
             <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
-            <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
+            <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu">Menu</label>
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html" class="active_page">Home</a></li>
@@ -33,7 +33,7 @@
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
-                    <li><a href="/contact_us.html" class="text_green">Contact us</a></li>
+                    <li><a href="/contact_us.html">Contact us</a></li>
                 </ul>
             </nav>
         </div>
@@ -73,7 +73,7 @@
             <a href="/news.html#news_section">
                 <h2 class="header_titlebox b_green">News - Special Events & Exhibitions</h2>
             </a>
-            <div class="grid3fit  content_wrap">
+            <div class="grid3fit content_wrap">
                 <a href="/news.html" class="productbox text_black">
                     <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                     </div>
@@ -97,21 +97,21 @@
             <a href="/visit_us.html#explore_section">
                 <h2 class="header_titlebox b_blue ">Explore</h2>
             </a>
-            <div class="grid3fit  content_wrap">
+            <div class="grid3fit content_wrap">
                 <a href="/visit_us.html#for_kids" class="explore_box">
-                    <h3 class="button gray explore_text text_black">For Kids</h3>
+                    <h3 class="button gray_background explore_text text_black">For Kids</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/samuel-zeller-158996.jpg"
                             alt="Image of a kid - For kids"></div>
                 </a>
                 <a href="/visit_us.html#for_teachers" class="explore_box">
-                    <h3 class="button gray explore_text text_black">For Teachers</h3>
+                    <h3 class="button gray_background explore_text text_black">For Teachers</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/learning.jpg"
                             alt="Image of a kid and a teacher - For Teachers"></div>
                 </a>
                 <a href="/visit_us.html#for_reserchers" class="explore_box">
-                    <h3 class="button gray explore_text text_black">Researchers</h3>
+                    <h3 class="button gray_background explore_text text_black">Researchers</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/people-219985_1280.jpg"
                             alt=" Image of a Researcher - For researchers">
@@ -120,11 +120,11 @@
             </div>
             <div class="space"><a href="/visit_us.html#explore_section" class="button b_blue">Find out more</a></div>
         </section>
-        <section class="h_s_exhibition_s dark_background section_padding">
+        <section class="padding_top1rem dark_background section_padding">
             <a href="/exhibits.html#exhibition_spaces">
                 <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
             </a>
-            <div class="grid3fit  content_wrap">
+            <div class="grid3fit content_wrap">
                 <a href="/exhibits.html#cosmology" class="productbox">
                     <div class="product_img"><img src="images/celso-405219.jpg" alt="The moon image"></div>
                     <h3 class="text_white">Cosmology</h3>
@@ -161,7 +161,7 @@
                     <p>Verket 1 2580 Folldal</p>
                 </div>
                 <ul class="zeropadding open_hours">
-                    <p class="bold">Opening hours:</p>
+                    <p class="fw_600">Opening hours:</p>
                     <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
@@ -194,7 +194,7 @@
             </div>
             <div class="flexone">
                 <div class="contact_us">
-                    <p class="bold">Contact us:</p>
+                    <p class="fw_600">Contact us:</p>
                     <div class="item">
                         <p class="item">Phone:</p>  
                         <p class="item"> +47 38373635</p>
