--- a/visit_us.html
+++ b/visit_us.html
@@ -8,7 +8,7 @@
     <meta name="describtion"
         content="Plan your visit to our museum. Discover how to get here, learn about ticket options, and explore what awaits you when you step through our doors. Start your adventure now.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="padding1rem padding-top2rem">
                         <div>
-                            <p class="bold">Contact us:</p>
+                            <p class="fw_600">Contact us:</p>
                             <p class="margin02rem item">Phone: +47 38373635</p>
                             <p class="margin02rem item">E-mail: CSMuseum@museum.com</p>
                         </div>
@@ -81,7 +81,7 @@
             <div class="grid3fit content_wrap">
                 <div class="boxmargin white_background padding1rem visit_g_one">
                     <div class="green_underline">
-                        <h2 class="bold big_title">Opening hours</h2>
+                        <h2 class="fw_600 big_title">Opening hours</h2>
                     </div>
                     <ul class="zeropadding">
                         <li class="item">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="boxmargin white_background padding1rem visit_g_three">
                     <div class="green_underline">
-                        <h2 class="bold big_title">PRICES</h2>
+                        <h2 class="fw_600 big_title">PRICES</h2>
                     </div>
                     <p class="fontsize1_1rem">The entrance is free for all.</p>
                     <p class="fontsize1_1rem">There are guided tours of the museum that leave every hour. These tours
@@ -141,7 +141,7 @@
             <div class="content_wrap">
                 <div class="flex_spacebetween" id="for_kids">
                     <div class="explore_box">
-                        <h3 class="button gray explore_text text_black">For Kids</h3>
+                        <h3 class="button gray_background explore_text text_black">For Kids</h3>
                         <figure class="black_square"></figure>
                         <div class="product_img"><img src="/images/samuel-zeller-158996.jpg" alt="Image of a kid"></div>
                     </div>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="flex_spacebetween padding-top2rem" id="for_teachers">
                     <div class="explore_box">
-                        <h3 class="button gray explore_text text_black">For Teachers</h3>
+                        <h3 class="button gray_background explore_text text_black">For Teachers</h3>
                         <figure class="black_square"></figure>
                         <div class="product_img"><img src="/images/learning.jpg" alt="Image of a kid and a teacher">
                         </div>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="flex_spacebetween padding-top2rem" id="for_reserchers">
                     <div class="explore_box">
-                        <h3 class="button gray explore_text text_black">Researchers</h3>
+                        <h3 class="button gray_background explore_text text_black">Researchers</h3>
                         <figure class="black_square"></figure>
                         <div class="product_img"><img src="/images/people-219985_1280.jpg" alt=" Image of a
                                 Researcher">
@@ -241,7 +241,7 @@
                     <p>Verket 1 2580 Folldal</p>
                 </div>
                 <ul class="zeropadding open_hours">
-                    <p class="bold">Opening hours:</p>
+                    <p class="fw_600">Opening hours:</p>
                     <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
@@ -274,7 +274,7 @@
             </div>
             <div class="flexone">
                 <div class="contact_us">
-                    <p class="bold">Contact us:</p>
+                    <p class="fw_600">Contact us:</p>
                     <div class="item">
                         <p class="item">Phone:</p>
                         <p class="item"> +47 38373635</p>
