--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,7 @@
     <meta name="describtion"
         content="Learn about our museum's rich history and our commitment to bringing science to life through over 1000 interactive exhibits. Join us on a journey of discovery.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +26,7 @@
         <div class="floating_nav">
             <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
             <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
+            
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
@@ -89,7 +90,7 @@
                     <p>Verket 1 2580 Folldal</p>
                 </div>
                 <ul class="zeropadding open_hours">
-                    <p class="bold">Opening hours:</p>
+                    <p class="fw_600">Opening hours:</p>
                     <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
@@ -122,7 +123,7 @@
             </div>
             <div class="flexone">
                 <div class="contact_us">
-                    <p class="bold">Contact us:</p>
+                    <p class="fw_600">Contact us:</p>
                     <div class="item">
                         <p class="item">Phone:</p>
                         <p class="item"> +47 38373635</p>
