--- a/contact_us.html
+++ b/contact_us.html
@@ -8,7 +8,7 @@
     <meta name="describtion"
         content="Reach out to us for inquiries, feedback, or to plan your visit. Our team is here to assist you with any questions you may have. Get in touch today.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
             <div class="grid3fit padding1rem gridcenter flexcenter">
                 <div class="contact_us_text">
                     <div class="padding1rem">
-                        <p class="bold">Contact us at:</p>
+                        <p class="fw_600">Contact us at:</p>
                         <div class="contact_us">
                             <p class="item">Phone: +47 38373635</p>
                             <p class="item">E-mail: CSMuseum@museum.com</p>
@@ -100,7 +100,7 @@
                     <p>Verket 1 2580 Folldal</p>
                 </div>
                 <ul class="zeropadding open_hours">
-                    <p class="bold">Opening hours:</p>
+                    <p class="fw_600">Opening hours:</p>
                     <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
@@ -133,7 +133,7 @@
             </div>
             <div class="flexone">
                 <div class="contact_us">
-                    <p class="bold">Contact us:</p>
+                    <p class="fw_600">Contact us:</p>
                     <div class="item">
                         <p class="item">Phone:</p>
                         <p class="item"> +47 38373635</p>
