--- a/information.html
+++ b/information.html
@@ -8,7 +8,7 @@
     <meta name="describtion"
         content="Find essential information for planning your visit. Get details on prices, opening hours, etc. Prepare for an exciting journey into the world of science.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,7 @@
             </div>
             <div class="grid3fit content_wrap opening_hours">
                 <div class="boxmargin white_background padding1rem g_one">
-                    <h2 class="green_underline bold big_title">Opening hours</h2>
+                    <h2 class="green_underline fw_600 big_title">Opening hours</h2>
                     <ul class="zeropadding">
                         <li class="item">
                             <p class="item_l">Monday:</p>
@@ -80,14 +80,14 @@
                 </div>
                 <div class="boxmargin white_background padding1rem g_two" id="accessibility">
                     <div class="green_underline">
-                        <h2 class="bold big_title">Accessibility</h2>
+                        <h2 class="fw_600 big_title">Accessibility</h2>
                     </div>
                     <p class="fontsize1_1rem">The museum has wheelchair accessibility ramps. It also has audio guides
                         and braille display signs for the visually impaired.</p>
                 </div>
                 <div class="boxmargin white_background padding1rem g_three" id="prices_i_p">
                     <div class="green_underline">
-                        <h2 class="bold big_title">PRICES</h2>
+                        <h2 class="fw_600 big_title">PRICES</h2>
                     </div>
                     <p class="fontsize1_1rem">The entrance is free for all.</p>
                     <p class="fontsize1_1rem">There are guided tours of the museum that leave every hour. These tours
@@ -99,38 +99,40 @@
                 </div>
                 <div class="boxmargin white_background padding1rem g_four">
                     <div class="green_underline">
-                        <h2 class="bold big_title">Events and Exhibits</h2>
+                        <h2 class="fw_600 big_title">Events and Exhibits</h2>
                     </div>
-                    <h3 class="fontsize1_1rem">News:</h3>
-                    <ul class="zeropadding flexone links">
-                        <li><a href="/news.html#Professor_of_aeronautics">
-                            <h4 class="item fontsize1_1rem">Visiting Professor of Aeronautics</h4>
-                        </a></li>
-                        <li><a href="/news.html#night_in_the_museum">
-                            <h4 class="item fontsize1_1rem">Night in the museum</h4>
-                        </a></li>
-                        <li><a href="/news.html#energetica_echibiton_on_loan">
-                            <h4 class="item fontsize1_1rem">Energetica Echibiton on Loan</h4>
-                        </a></li>
-                    </ul>
-                    <h3 class="fontsize1_1rem">Exhibits:</h3>
-                    <ul class="zeropadding flexone links">
-                        <li><a href="/exhibits.html#cosmology">
-                            <h4 class="item fontsize1_1rem">Cosmology</h4>
-                        </a></li>
-                        <li><a href="/exhibits.html#evolution">
-                            <h4 class="item fontsize1_1rem">Evolution</h4>
-                        </a></li>
-                        <li><a href="/exhibits.html#biology_and_medicine">
-                            <h4 class="item fontsize1_1rem">Biology and Medicine</h4>
-                        </a></li>
-                        <li><a href="/exhibits.html#robotics_and_AI">
-                            <h4 class="item fontsize1_1rem">Robotic and AI</h4>
-                        </a></li>
-                        <li><a href="/exhibits.html#ecology">
-                            <h4 class="item fontsize1_1rem">Ecology</h4>
-                        </a></li>
-                    </ul>
+                    <nav>
+                        <h3 class="fontsize1_1rem">News:</h3>
+                        <ul class="links">
+                            <li><a href="/news.html#Professor_of_aeronautics">
+                                    <h4 class="item fontsize1_1rem">Visiting Professor of Aeronautics</h4>
+                                </a></li>
+                            <li><a href="/news.html#night_in_the_museum">
+                                    <h4 class="item fontsize1_1rem">Night in the museum</h4>
+                                </a></li>
+                            <li><a href="/news.html#energetica_echibiton_on_loan">
+                                    <h4 class="item fontsize1_1rem">Energetica Echibiton on Loan</h4>
+                                </a></li>
+                        </ul>
+                        <h3 class="fontsize1_1rem">Exhibits:</h3>
+                        <ul class="links">
+                            <li><a href="/exhibits.html#cosmology">
+                                    <h4 class="item fontsize1_1rem">Cosmology</h4>
+                                </a></li>
+                            <li><a href="/exhibits.html#evolution">
+                                    <h4 class="item fontsize1_1rem">Evolution</h4>
+                                </a></li>
+                            <li><a href="/exhibits.html#biology_and_medicine">
+                                    <h4 class="item fontsize1_1rem">Biology and Medicine</h4>
+                                </a></li>
+                            <li><a href="/exhibits.html#robotics_and_AI">
+                                    <h4 class="item fontsize1_1rem">Robotic and AI</h4>
+                                </a></li>
+                            <li><a href="/exhibits.html#ecology">
+                                    <h4 class="item fontsize1_1rem">Ecology</h4>
+                                </a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </section>
@@ -138,7 +140,7 @@
             <div class="boxmargin  text_img_group section_padding" id="shop">
                 <div class="group_info padding1rem">
                     <div class="green_underline">
-                        <h2 class="bold big_title">Shop</h2>
+                        <h2 class="fw_600 big_title">Shop</h2>
                     </div>
                     <p class="fontsize1_1rem">Our shop offers a range of memorabilia from the museum as well as great
                         gifts and activity packs that allow you to continue to explore science even after you’ve left
@@ -152,7 +154,7 @@
             <div class="boxmargin  text_img_group section_padding" id="food_and_drink">
                 <div class="group_info padding1rem">
                     <div class="blue_underline">
-                        <h2 class="bold big_title">Food and Drink</h2>
+                        <h2 class="fw_600 big_title">Food and Drink</h2>
                     </div>
                     <p class="fontsize1_1rem">There is a café attached to the museum where you can get light lunches,
                         soft drinks, coffee, snacks and more.</p>
@@ -205,7 +207,7 @@
                     <p>Verket 1 2580 Folldal</p>
                 </div>
                 <ul class="zeropadding open_hours">
-                    <p class="bold">Opening hours:</p>
+                    <p class="fw_600">Opening hours:</p>
                     <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
@@ -238,7 +240,7 @@
             </div>
             <div class="flexone">
                 <div class="contact_us">
-                    <p class="bold">Contact us:</p>
+                    <p class="fw_600">Contact us:</p>
                     <div class="item">
                         <p class="item">Phone:</p>
                         <p class="item"> +47 38373635</p>
