--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
     <meta name="describtion"
         content="Stay updated on our latest events and exhibitions. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -85,11 +85,11 @@
                 </div>
             </div>
         </section>
-        <div class="flexwrap content_wrap gap1rem">
-            <div class="space">
-                <a href="/exhibits.html" class="button b_blue fontsize1_1rem">Exhibits page</a>
+        <div class="flexwrap content_wrap gap1rem section_padding">
+            <div>
+                <a href="/exhibits.html" class="button b_blue fontsize1_1rem">Exhibits page</a> 
             </div>
-            <div class="space">
+            <div>
                 <a href="/information.html" class="button b_blue fontsize1_1rem">Information page</a>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     <p>Verket 1 2580 Folldal</p>
                 </div>
                 <ul class="zeropadding open_hours">
-                    <p class="bold">Opening hours:</p>
+                    <p class="fw_600">Opening hours:</p>
                     <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
@@ -135,7 +135,7 @@
             </div>
             <div class="flexone">
                 <div class="contact_us">
-                    <p class="bold">Contact us:</p>
+                    <p class="fw_600">Contact us:</p>
                     <div class="item">
                         <p class="item">Phone:</p>
                         <p class="item"> +47 38373635</p>
