--- a/contact_us.html
+++ b/contact_us.html
@@ -49,15 +49,15 @@
             <div class="grid3fit padding1rem gridcenter flexcenter">
                 <div class="contact_us_text">
                     <div class="padding1rem">
-                        <p class="fw_600">Contact us at:</p>
+                        <h2 class="">Contact us at:</h2>
                         <div class="contact_us">
                             <p class="item">Phone: +47 38373635</p>
                             <p class="item">E-mail: CSMuseum@museum.com</p>
                         </div>
                     </div>
                     <div class="padding1rem">
-                        <p>Or you can send us a message here:</p>
-                        <form id="message_area" method="post" enctype="text/plain">
+                        <form id="message_area" method="post" enctype="text/plain" >
+                            <p>Or you can send us a message here:</p>
                             <div class="message_input flex_spacebetween gap1rem">
                                 <div class="w_100">
                                     <label for="messagename">Name</label>
@@ -79,7 +79,13 @@
                             <textarea class="w_100" name="message" id="message" cols="20" rows="5"
                                 placeholder="Your message" required></textarea>
                             <div class="submit_area">
-                                <button class="button b_green" type="submit" name="Submit">Send message</button>
+                                <button class="button b_green" type="submit" name="Submit" id="sendmessage">Send message</button>
+                            </div>
+                        </form>
+                        <form class="message_area_sent flexcenter" id="message_area_sent">
+                            <div class="flexcenter h_100    ">
+                                <h3>Mail was successfully sent.</h3>
+                                <button class="button b_green" id="new_mail" >Want to send a new one?</button>
                             </div>
                         </form>
                     </div>
@@ -173,7 +179,7 @@
                     </a></li>
             </nav>
             <div class="flexone">
-                <form action="post" class="center_n newsletter">
+                <form method="post" class="center_n newsletter">
                     <p>Subscribe to our newsletter</p>
                     <label for="name" style="display: none;">Name</label>
                     <input type="text" id="name" name="name" placeholder="Name">
@@ -189,6 +195,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/contactus.js"></script>
 </body>
 
 </html>
