--- a/index.html
+++ b/index.html
@@ -160,37 +160,37 @@
                     <p>Community Science Museum</p>
                     <p>Verket 1 2580 Folldal</p>
                 </div>
-                <ul class="zeropadding open_hours">
+                <div class="zeropadding open_hours">
                     <p class="fw_600">Opening hours:</p>
-                    <li class="item">
+                    <div class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Tuesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Wednesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Thursday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Friday:</p>
                         <p class="ho_day_t">10:00 – 19:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Saturday:</p>
                         <p class="ho_day_t">9:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Sunday:</p>
                         <p class="ho_day_t">9:00 – 13:00</p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
             <div class="flexone">
                 <div class="contact_us">
