--- a/news.html
+++ b/news.html
@@ -47,7 +47,7 @@
         </section>
         <section class="h_s_news section_padding" id="news_section">
             <h2 class="header_titlebox b_green">Special events and exhibitions news</h2>
-            <div class="grid3fit  content_wrap">
+            <div class="grid3fit content_wrap">
                 <div class="newsbox" id="Professor_of_aeronautics">
                     <h3 class="title">Visiting Professor of Aeronautics</h3>
                     <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of
@@ -101,37 +101,37 @@
                     <p>Community Science Museum</p>
                     <p>Verket 1 2580 Folldal</p>
                 </div>
-                <ul class="zeropadding open_hours">
+                <div class="zeropadding open_hours">
                     <p class="fw_600">Opening hours:</p>
-                    <li class="item">
+                    <div class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Tuesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Wednesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Thursday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Friday:</p>
                         <p class="ho_day_t">10:00 – 19:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Saturday:</p>
                         <p class="ho_day_t">9:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Sunday:</p>
                         <p class="ho_day_t">9:00 – 13:00</p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
             <div class="flexone">
                 <div class="contact_us">
