--- a/information.html
+++ b/information.html
@@ -47,36 +47,37 @@
             <div class="grid3fit content_wrap opening_hours">
                 <div class="boxmargin white_background padding1rem g_one">
                     <h2 class="green_underline fw_600 big_title">Opening hours</h2>
-                    <ul class="zeropadding">
-                        <li class="item">
+                    <div class="zeropadding open_hours">
+                        <p class="fw_600">Opening hours:</p>
+                        <div class="item">
                             <p class="item_l">Monday:</p>
                             <p class="ho_day_t">Closed</p>
-                        </li>
-                        <li class="item">
+                        </div>
+                        <div class="item">
                             <p class="item_l">Tuesday:</p>
                             <p class="ho_day_t">10:00 – 16:00</p>
-                        </li>
-                        <li class="item">
+                        </div>
+                        <div class="item">
                             <p class="item_l">Wednesday:</p>
                             <p class="ho_day_t">10:00 – 16:00</p>
-                        </li>
-                        <li class="item">
+                        </div>
+                        <div class="item">
                             <p class="item_l">Thursday:</p>
                             <p class="ho_day_t">10:00 – 16:00</p>
-                        </li>
-                        <li class="item">
+                        </div>
+                        <div class="item">
                             <p class="item_l">Friday:</p>
                             <p class="ho_day_t">10:00 – 19:00</p>
-                        </li>
-                        <li class="item">
+                        </div>
+                        <div class="item">
                             <p class="item_l">Saturday:</p>
                             <p class="ho_day_t">9:00 – 16:00</p>
-                        </li>
-                        <li class="item">
+                        </div>
+                        <div class="item">
                             <p class="item_l">Sunday:</p>
                             <p class="ho_day_t">9:00 – 13:00</p>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="boxmargin white_background padding1rem g_two" id="accessibility">
                     <div class="green_underline">
@@ -206,37 +207,37 @@
                     <p>Community Science Museum</p>
                     <p>Verket 1 2580 Folldal</p>
                 </div>
-                <ul class="zeropadding open_hours">
+                <div class="zeropadding open_hours">
                     <p class="fw_600">Opening hours:</p>
-                    <li class="item">
+                    <div class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Tuesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Wednesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Thursday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Friday:</p>
                         <p class="ho_day_t">10:00 – 19:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Saturday:</p>
                         <p class="ho_day_t">9:00 – 16:00</p>
-                    </li>
-                    <li class="item">
+                    </div>
+                    <div class="item">
                         <p class="item_l">Sunday:</p>
                         <p class="ho_day_t">9:00 – 13:00</p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
             <div class="flexone">
                 <div class="contact_us">
