--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Home</title>
-    <meta name="describtion" content="Discover the wonders of science and exploration at our museum. Immerse yourself in interactive exhibits and ignite your passion for the world around us.">
+    <meta name="describtion"
+        content="Discover the wonders of science and exploration at our museum. Immerse yourself in interactive exhibits and ignite your passion for the world around us.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -196,7 +197,7 @@
                 <div class="contact_us">
                     <p class="fw_600">Contact us:</p>
                     <div class="item">
-                        <p class="item">Phone:</p>  
+                        <p class="item">Phone:</p>
                         <p class="item"> +47 38373635</p>
                     </div>
                     <div class="item">
@@ -214,24 +215,26 @@
                 </div>
             </div>
             <nav class="flexone links links_f">
-                <li><a href="/visit_us.html#get_involved">
-                        <p class="item">Get involed</p>
-                    </a></li>
-                <li><a href="/visit_us.html#explore_section">
-                        <p class="item">Explore</p>
-                    </a></li>
-                <li><a href="/information.html#prices_i_p">
-                        <p class="item">Prices</p>
-                    </a></li>
-                <li><a href="/information.html#accessibility">
-                        <p class="item">Accessibility</p>
-                    </a></li>
-                <li><a href="/information.html#shop">
-                        <p class="item">Shop</p>
-                    </a></li>
-                <li><a href="/information.html#food_and_drink">
-                        <p class="item">Food and drink</p>
-                    </a></li>
+                <ul>
+                    <li><a href="/visit_us.html#get_involved">
+                            <p class="item">Get involed</p>
+                        </a></li>
+                    <li><a href="/visit_us.html#explore_section">
+                            <p class="item">Explore</p>
+                        </a></li>
+                    <li><a href="/information.html#prices_i_p">
+                            <p class="item">Prices</p>
+                        </a></li>
+                    <li><a href="/information.html#accessibility">
+                            <p class="item">Accessibility</p>
+                        </a></li>
+                    <li><a href="/information.html#shop">
+                            <p class="item">Shop</p>
+                        </a></li>
+                    <li><a href="/information.html#food_and_drink">
+                            <p class="item">Food and drink</p>
+                        </a></li>
+                </ul>
             </nav>
             <div class="flexone">
                 <form action="post" class="center_n newsletter">
