Changes in mobile version
removed image from mobile version and changed grid for exhibition section on index page

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="space"><a href="/visit_us.html#explore_section" class="button b_blue">Find out more</a></div>
         </section>
-        <section class="padding_top1rem dark_background section_padding">
+        <section class="padding_top1rem dark_background section_padding" id="exhibition_spaces">
             <a href="/exhibits.html#exhibition_spaces">
                 <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
             </a>
