Font fixing and exhibits grid fix

--- a/about_us.html
+++ b/about_us.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - About us</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Folldal, Museum, free entrence, about us">
     <meta name="describtion"
         content="Learn about our museum's rich history and our commitment to bringing science to life through over 1000 interactive exhibits. Join us on a journey of discovery.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
