--- a/contact_us.html
+++ b/contact_us.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Contact us</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Museum, contact us">
     <meta name="describtion"
         content="Reach out to us for inquiries, feedback, or to plan your visit. Our team is here to assist you with any questions you may have. Get in touch today.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
