--- a/exhibits.html
+++ b/exhibits.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Exhibition</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Museum, exhibits">
     <meta name="describtion" content="Explore a diverse range of science-related showcases and experiences.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
