--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Home</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Folldal, Museum, free entrence, exhibits, explore">
     <meta name="describtion"
         content="Discover the wonders of science and exploration at our museum. Immerse yourself in interactive exhibits and ignite your passion for the world around us.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
@@ -121,7 +123,7 @@
             </div>
             <div class="space"><a href="/visit_us.html#explore_section" class="button b_blue">Find out more</a></div>
         </section>
-        <section class="padding_top1rem dark_background section_padding" id="exhibition_spaces">
+        <section class="padding_top1rem dark_background section_padding" id="exhibition_spaces_hp">
             <a href="/exhibits.html#exhibition_spaces">
                 <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
             </a>
