--- a/information.html
+++ b/information.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Information</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Folldal, Museum, free entrence, exhibits, explore, information, accessibility, cafe, shop, prices, opening hours, get involed">
     <meta name="describtion"
         content="Find essential information for planning your visit. Get details on prices, opening hours, etc. Prepare for an exciting journey into the world of science.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
