--- a/news.html
+++ b/news.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - News</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Museum, news, events, exhibits">
     <meta name="describtion"
         content="Stay updated on our latest events and exhibitions. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
