--- a/visit_us.html
+++ b/visit_us.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Visit us</title>
+    <meta name="author" content="Kine Odden Nystuen">
+    <meta name="Keywords" content="science, Folldal, Museum, free entrence, exhibits, explore, visit us">
     <meta name="describtion"
         content="Plan your visit to our museum. Discover how to get here, learn about ticket options, and explore what awaits you when you step through our doors. Start your adventure now.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
