--- a/contact_us.html
+++ b/contact_us.html
@@ -24,7 +24,7 @@
 
 <body>
     <header class="sticky_header">
-        <a href="/index.html" class="header_logo" role="img" aria-label="homepage button"></a>
+        <a href="/index.html" title="Go to homepage" class="header_logo" role="img" aria-label="homepage button"></a>
         <div class="floating_nav">
             <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
             <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
@@ -152,10 +152,10 @@
                     </div>
                 </div>
                 <div class="social_media">
-                    <a href="/">
+                    <a href="/" title="Visit our Instagram" aria-label="Instagram">
                         <figure class="instagram image"></figure>
                     </a>
-                    <a href="/">
+                    <a href="/" title="Visit our Facebook" aria-label="Facebook">
                         <figure class="facebook image"></figure>
                     </a>
                 </div>
